@@ -1,6 +1,7 @@
 ## texk/web2c/mplibdir/am/mplib.am: Makefile fragment for MetaPost.
 ##
-## Copyright (C) 2009-2015 Peter Breitenlohner <tex-live@tug.org>
+## Copyright 2017-2018 Luigi Scarso <tex-live@tug.org>
+## Copyright 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
 ## MetaPost
@@ -13,6 +14,7 @@ install_exe_links += install-mpost-links
 uninstall_exe_links += uninstall-mpost-links
 else !WIN32
 bin_links += mpost$(EXEEXT):dvitomp mpost$(EXEEXT):mfplain
+bin_links += mpost$(EXEEXT):r-mpost
 endif !WIN32
 endif MP
 EXTRA_PROGRAMS += mpost
